<resources>
    <string name="ps_ok_button">OK</string>
    <string name="ps_cancel_button">Отмена</string>
    <string name="ps_proceed">Продолжить</string>
    <string name="ps_confirm">Подтвердить</string>
    <string name="ps_back_main">Вернуться на главный экран</string>
    <string name="ps_add">Добавить</string>
    <string name="ps_save">Сохранить</string>
    <string name="ps_save_or_send">Сохранить или отправить</string>
    <string name="ps_search">Искать</string>
    <string name="ps_pay_card">Оплатить %s</string>
    <string name="ps_pay_online">Оплатить онлайн</string>
    <string name="ps_pay_simple">Оплатить</string>
    <string name="ps_understand">Понятно</string>
    <string name="ps_show">Показать</string>
    <string name="ps_auth_button">Войти через Госуслуги</string>
    <string name="ps_well">Хорошо</string>
    <string name="ps_action_settings">Настройки</string>
    <string name="ps_action_delete">Удалить</string>
    <string name="ps_action_history">История</string>
    <string name="ps_action_filter">Фильтр</string>
    <string name="ps_action_filter_reset">Сбросить всё</string>
    <string name="ps_action_scan">Сканировать</string>
    <string name="ps_main_screen">Платежи</string>
    <string name="ps_tax">Налоги</string>
    <string name="ps_auto_fines">Штрафы ГИБДД</string>
    <string name="ps_old_payment_section1">Переводы</string>
    <string name="ps_old_payment_section2">Коммунальные платежи</string>
    <string name="ps_old_payment_section3">Сотовая связь</string>
    <string name="ps_old_payment_section4">Телефония</string>
    <string name="ps_old_payment_section5">Интернет</string>
    <string name="ps_old_payment_section6">Телевидение</string>
    <string name="ps_old_payment_section7">Погашение кредита</string>
    <string name="ps_old_payment_section8">Прочее</string>
    <string name="ps_uri_scheme">android-app</string>
    <string name="ps_uri_host">ru.russianpost.payments</string>
    <string name="ps_uid_tax_detail_url">android-app://ru.russianpost.payments/uid_tax_detail_fragment</string>
    <string name="ps_fine_detail_url">android-app://ru.russianpost.payments/fine_detail_fragment</string>
    <string name="ps_scan_qr_code">Сканировать QR-код</string>
    <string name="ps_no_camera_perm">Нет доступа к камере</string>
    <string name="ps_torch_on">"Фонарик вкл.</string>
    <string name="ps_torch_off">Фонарик выкл.</string>
    <string name="ps_scan_error">Ошибка сканирования</string>
    <string name="ps_history">История</string>
    <string name="ps_filter">Фильтр</string>
    <string name="ps_history_not_found">История платежей не найдена</string>
    <string name="ps_category">Категория</string>
    <string name="ps_period">Период</string>
    <string name="ps_filter_tax">Налоги</string>
    <string name="ps_filter_fine">Штрафы</string>
    <string name="ps_week">Неделя</string>
    <string name="ps_month">Месяц</string>
    <string name="ps_year">Год</string>
    <string name="ps_custom_period">Указать свой период</string>
    <string name="ps_select_period">Выберите период</string>
    <string name="ps_history_tax_title">Оплата налога</string>
    <string name="ps_history_fine_title">Оплата штрафа ГИБДД</string>
    <string name="ps_uid_tax_payment_done_url">android-app://ru.russianpost.payments/uid_tax_payment_done_fragment</string>
    <string name="ps_tax_payment_done_url">android-app://ru.russianpost.payments/tax_payment_done_fragment</string>
    <string name="ps_fine_payment_done_url">android-app://ru.russianpost.payments/fine_payment_done_fragment</string>
    <string name="ps_confirmation_title">Бланк денежного почтового перевода</string>
    <string name="ps_payment_card_title">Оплата картой</string>
    <string name="ps_view_check_title">Чек</string>
    <string name="ps_another_card">Другой картой</string>
    <string name="ps_auth_text">Для совершения платежа необходимо авторизоваться через Госуслуги</string>
    <string name="ps_auth_desc">Авторизация через Госуслуги дает доступ к ЕСИА (Единая система идентификации  и аутентификации) и предоставляет возможность идентифицировать вас</string>
    <string name="ps_reg_address_title">Адрес регистрации</string>
    <string name="ps_reg_address_text">Для совершения платежа введите, пожалуйста, адрес регистрации отправителя</string>
    <string name="ps_reg_address_hint">Введите адрес регистрации</string>
    <string name="ps_uid_tax_payments">Оплата налогов</string>
    <string name="ps_uid_tax_search">Оплата налога</string>
    <string name="ps_uid_taxes">Налоги</string>
    <string name="ps_uid_tax_details">Оплата налога</string>
    <string name="ps_uid_tax_requisites">Реквизиты</string>
    <string name="ps_uid_tax_done">Оплата налога</string>
    <string name="ps_uid_tax_search_documents">По ИНН</string>
    <string name="ps_uid_tax_search_uin">По идентификатору (УИН)</string>
    <string name="ps_uid_tax_inn_num">ИНН</string>
    <string name="ps_uid_tax_uin_num">УИН</string>
    <string name="ps_uid_tax_num_hint">Введите номер</string>
    <string name="ps_uid_tax_inn_num_assistive">ИНН - 12 цифр</string>
    <string name="ps_uid_tax_uin_num_assistive">УИН - 20 или 25 цифр</string>
    <string name="ps_uid_tax_searching">Поиск налогов</string>
    <string name="ps_uid_tax_not_found">Налоги не найдены</string>
    <string name="ps_uid_tax_for">За %s</string>
    <string name="ps_uid_search">Поиск начисления</string>
    <string name="ps_uid_auth_need">Для оплаты потребуется авторизация через Госуслуги \nПлатеж учитывается ФНС в течение 10 рабочих дней (пени за данный период не начисляются)</string>
    <string name="ps_uid">УИН</string>
    <string name="ps_sum">Сумма</string>
    <string name="ps_tax_payment">Оплата налога по постановлению</string>
    <string name="ps_recipient_bank">Банк получателя</string>
    <string name="ps_inn">ИНН %s</string>
    <string name="ps_inn_number">Номер ИНН</string>
    <string name="ps_add_inn">Добавить ИНН</string>
    <string name="ps_tax_recipient_info_title">Получатель</string>
    <string name="ps_tax_payer_info_title">Отправитель</string>
    <string name="ps_tax_payment_info_title">Платеж</string>
    <string name="ps_tax_payment_done_title">Оплата налога</string>
    <string name="ps_bank_id_code">БИК</string>
    <string name="ps_bank_id_code_hint">Введите 9 цифр БИК</string>
    <string name="ps_account_number">Номер счета</string>
    <string name="ps_account_number_hint">Введите 20 цифр расчетного счета</string>
    <string name="ps_account_number_assistive">Счет должен начинаться с 03</string>
    <string name="ps_budget_classification_code">КБК</string>
    <string name="ps_budget_classification_code_hint">Введите 20 цифр КБК</string>
    <string name="ps_oktmo">ОКТМО</string>
    <string name="ps_oktmo_hint">Введите 8 цифр ОКТМО</string>
    <string name="ps_tax_id_number_recipient">ИНН получателя</string>
    <string name="ps_tax_id_number_recipient_hint">Введите 10 цифр ИНН</string>
    <string name="ps_reason_code">КПП</string>
    <string name="ps_reason_code_hint">Введите 9 цифр КПП</string>
    <string name="ps_bank_name">Наименование банка получателя</string>
    <string name="ps_correspondent_account">к/с</string>
    <string name="ps_recipient_name">Наименование получателя</string>
    <string name="ps_tax_id_number_payer">ИНН плательщика</string>
    <string name="ps_tax_id_number_payer_hint">Введите 10–12 цифр ИНН</string>
    <string name="ps_status_payer">Статус плательщика</string>
    <string name="ps_first_name">Имя</string>
    <string name="ps_first_name_hint">Введите имя полностью</string>
    <string name="ps_patronymic">Отчество</string>
    <string name="ps_patronymic_hint">Введите отчество полностью</string>
    <string name="ps_patronymic_assistive">Если нет отчества, то оставьте поле пустым</string>
    <string name="ps_last_name">Фамилия</string>
    <string name="ps_last_name_hint">Введите фамилию полностью</string>
    <string name="ps_address">Адрес плательщика</string>
    <string name="ps_address_hint">Введите адрес плательщика</string>
    <string name="ps_email">E-mail для отправки чека</string>
    <string name="ps_email_hint">Введите ваш e-mail</string>
    <string name="ps_confirm_not_public_official">Подтверждаю, что не являюсь публичным должностным лицом</string>
    <string name="ps_what_public_official">Что такое публичное должностное лицо?</string>
    <string name="ps_payment_basis">Основание платежа</string>
    <string name="ps_tax_period">Налоговый период</string>
    <string name="ps_tax_period_hint">Введите год налогового периода</string>
    <string name="ps_tax_period_assistive">Пример: 2020 — год налогового периода, за который совершается платеж</string>
    <string name="ps_charges_uid_document">УИН документа</string>
    <string name="ps_charges_uid_document_hint">Введите 20 цифр УИН</string>
    <string name="ps_charges_uid_document_assistive">Если УИН отсутствует введите 0</string>
    <string name="ps_payment_purpose">Назначение платежа</string>
    <string name="ps_payment_purpose_hint">Введите назначение платежа</string>
    <string name="ps_payment_sum">Сумма платежа</string>
    <string name="ps_payment_sum_hint">Введите сумму платежа</string>
    <string name="ps_payment_confirmation">Проверьте бланк почтового денежного перевода и нажмите «Подтвердить»</string>
    <string name="ps_amount">Сумма перевода</string>
    <string name="ps_commission">Комиссия</string>
    <string name="ps_total">Итого к оплате</string>
    <string name="ps_sender_full_name">ФИО отправителя</string>
    <string name="ps_sender_address">Адрес отправителя</string>
    <string name="ps_birth_date">Дата рождения отправителя</string>
    <string name="ps_mobile_phone">Мобильный телефон отправителя</string>
    <string name="ps_citizenship">Гражданство отправителя</string>
    <string name="ps_sender_id">Удостоверение личности отправителя</string>
    <string name="ps_series_and_number">Серия и номер</string>
    <string name="ps_issued_by">Кем выдан</string>
    <string name="ps_when_issued">Когда выдан</string>
    <string name="ps_organization_name">Наименование организации получателя</string>
    <string name="ps_payment_account">Расчетный счет получателя</string>
    <string name="ps_recipient_bank_id_code">БИК получателя</string>
    <string name="ps_data_sent">Данные отправлены</string>
    <string name="ps_sum_str">%.2f %s</string>
    <string name="ps_payment_done">Оплата выполнена успешно</string>
    <string name="ps_payment_done_add">Чек будет отправлен на e-mail</string>
    <string name="ps_view_check">Посмотреть чек</string>
    <string name="ps_save_check">Сохранить чек</string>
    <string name="ps_send_check">Отправить чек</string>
    <string name="ps_sender">Отправитель</string>
    <string name="ps_recipient">Получатель</string>
    <string name="ps_full_name_template">%s %s %s</string>
    <string name="ps_check_saved">Чек сохранен в папку Загрузки</string>
    <string name="ps_paid">Оплачено</string>
    <string name="ps_fines_menu_title">Штрафы ГИБДД</string>
    <string name="ps_fine_search_title">Поиск штрафов</string>
    <string name="ps_fine_uin_search_title">Поиск штрафов по УИН</string>
    <string name="ps_fines_title">Штрафы</string>
    <string name="ps_fine_title">Штраф</string>
    <string name="ps_fine_requisites_title">Реквизиты</string>
    <string name="ps_fine_payment_done_title">Оплата штрафа</string>
    <string name="ps_fine_settings">Настройки</string>
    <string name="ps_fine_documents">Мои документы</string>
    <string name="ps_fine_search_documents">Поиск по документам</string>
    <string name="ps_fine_search_uin">Поиск по УИН</string>
    <string name="ps_vehicle_registration_certificate">СТС</string>
    <string name="ps_vehicle_registration_certificate_hint">Введите номер</string>
    <string name="ps_driver_license">Водительское удостоверение</string>
</resources>