<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tax_nav_graph"
    app:startDestination="@id/taxRecipientInfoFragment">

    <fragment
        android:id="@+id/taxRecipientInfoFragment"
        android:name="ru.russianpost.payments.features.tax.ui.TaxRecipientInfoFragment"
        android:label="@string/ps_tax_recipient_info_title"
        tools:layout="@layout/ps_fragment_form" >
        <action
            android:id="@+id/to_tax_payer_action"
            app:destination="@id/taxPayerInfoFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/to_payment_done_action"
            app:destination="@id/taxPaymentDoneFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/tax_nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/taxPayerInfoFragment"
        android:name="ru.russianpost.payments.features.tax.ui.TaxPayerInfoFragment"
        android:label="@string/ps_tax_payer_info_title"
        tools:layout="@layout/ps_fragment_form" >
        <action
            android:id="@+id/to_tax_payment_action"
            app:destination="@id/taxPaymentInfoFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/taxPaymentInfoFragment"
        android:name="ru.russianpost.payments.features.tax.ui.TaxPaymentInfoFragment"
        android:label="@string/ps_tax_payment_info_title"
        tools:layout="@layout/ps_fragment_form" >
        <action
            android:id="@+id/to_auth_dialog_action"
            app:destination="@id/authDialogFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/selectCardAction"
            app:destination="@id/selectCardDialogFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <dialog
        android:id="@+id/selectCardDialogFragment"
        android:name="ru.russianpost.payments.features.payment_card.ui.SelectCardDialogFragment"
        tools:layout="@layout/ps_fragment_form" >
        <argument android:name="params"
            app:argType="ru.russianpost.payments.entities.payment_card.CardDetail[]" />
    </dialog>

    <fragment
        android:id="@+id/authDialogFragment"
        android:name="ru.russianpost.payments.features.payment_card.ui.AuthDialogFragment"
        android:label=""
        tools:layout="@layout/ps_fragment_auth_dialog" >
        <action
            android:id="@+id/to_confirmation_action"
            app:destination="@id/taxConfirmationFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/taxPaymentInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/taxConfirmationFragment"
        android:name="ru.russianpost.payments.features.tax.ui.TaxConfirmationFragment"
        android:label="@string/ps_confirmation_title"
        tools:layout="@layout/ps_fragment_form" >
        <action
            android:id="@+id/addressDialogFragmentAction"
            app:destination="@id/addressDialogFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/to_payment_card_action"
            app:destination="@id/paymentCardFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/taxPaymentInfoFragment" />
    </fragment>

    <dialog
        android:id="@+id/addressDialogFragment"
        android:name="ru.russianpost.payments.features.payment_card.ui.AddressDialogFragment"
        tools:layout="@layout/ps_fragment_form" >
    </dialog>

    <fragment
        android:id="@+id/paymentCardFragment"
        android:name="ru.russianpost.payments.features.payment_card.ui.PaymentCardFragment"
        android:label="@string/ps_payment_card_title"
        tools:layout="@layout/ps_fragment_form" >
        <action
            android:id="@+id/to_payment_done_action"
            app:destination="@id/taxPaymentDoneFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/tax_nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/taxPaymentDoneFragment"
        android:name="ru.russianpost.payments.features.tax.ui.TaxPaymentDoneFragment"
        android:label="@string/ps_tax_payment_done_title"
        tools:layout="@layout/ps_fragment_form" >
        <deepLink
            app:uri="@string/ps_tax_payment_done_url" />
        <argument android:name="params"
            app:argType="ru.russianpost.payments.entities.payment_card.PaymentDoneParams"
            android:defaultValue="NONE" />
        <action
            android:id="@+id/to_view_check_action"
            app:destination="@id/viewCheckFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/viewCheckFragment"
        android:name="ru.russianpost.payments.features.payment_card.ui.ViewCheckFragment"
        android:label="@string/ps_view_check"
        tools:layout="@layout/ps_fragment_view_check" >
        <argument android:name="params"
            app:argType="string"
            android:defaultValue="" />
        <action
            android:id="@+id/to_payment_done_dialog_action"
            app:destination="@id/paymentDoneDialogFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <dialog
        android:id="@+id/paymentDoneDialogFragment"
        android:name="ru.russianpost.payments.features.payment_card.ui.PaymentDoneDialogFragment"
        android:label="@string/ps_view_check"
        tools:layout="@layout/ps_fragment_form" >
        <action
            android:id="@+id/to_payment_done_action"
            app:destination="@id/taxPaymentDoneFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/tax_nav_graph"
            app:popUpToInclusive="true"/>
    </dialog>

    <dialog
        android:id="@+id/adviceFragment"
        android:name="ru.russianpost.payments.features.advices.ui.AdviceFragment"
        android:label=""
        tools:layout="@layout/ps_fragment_form" >
        <argument android:name="params"
            app:argType="string"
            android:defaultValue="" />
        <action
            android:id="@+id/webViewFragmentAction"
            app:destination="@id/webViewFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </dialog>

    <fragment
        android:id="@+id/webViewFragment"
        android:name="ru.russianpost.payments.base.ui.SimpleWebViewFragment"
        android:label=""
        tools:layout="@layout/ps_fragment_web_view" >
        <argument android:name="params"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <!--  Global actions  -->

    <action
        android:id="@+id/to_advice_action"
        app:destination="@id/adviceFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />

</navigation>