<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="ru.russianpost.payments.features.payment_card.ui.AuthDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ps_auth_dialog_background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:srcCompat="@drawable/ic24_action_close"
            app:tint="@color/constant_cotton"
            android:onClick="@{() -> vm.onCancelClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"  />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/close" >
<!--            app:layout_constraintBottom_toTopOf="@id/save_or_send">-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text"
                    style="@style/TextView.RussianPost.HeadlineRegular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/ps_horizontal_margin"
                    android:layout_marginTop="@dimen/ps_dimen_30"
                    android:text="@string/ps_auth_text"
                    android:textColor="@color/constant_cotton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Сумма штрафа со скидкой" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/desc"
                    style="@style/TextView.RussianPost.Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/ps_horizontal_margin"
                    android:layout_marginTop="@dimen/ps_dimen_24"
                    android:text="@string/ps_auth_desc"
                    android:textColor="@color/constant_cotton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text"
                    tools:text="Сумма штрафа со скидкой" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <ru.russianpost.mobileapp.widget.ButtonView
            android:id="@+id/save_or_send"
            style="@style/ButtonView.RussianPost.Opacity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/ps_horizontal_margin"
            android:layout_marginBottom="@dimen/ps_button_bottom_margin"
            android:text="@string/ps_auth_button"
            app:icon="@drawable/ic24_logo_gosuslugi"
            android:onClick="@{() -> vm.onClick()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cancel" />

        <ru.russianpost.mobileapp.widget.ButtonView
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/ps_horizontal_margin"
            android:layout_marginBottom="@dimen/ps_button_bottom_margin"
            android:text="@string/ps_cancel_button"
            android:onClick="@{() -> vm.onCancelClick()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>